Improve Image-Caption

--- a/2011000.md
+++ b/2011000.md
@@ -4,4 +4,4 @@ The Next-Phase-Vernisage is a [Vernisage](199000012.md) of Michael_Peters in the
 
 ## Pictures
 
-![Next Phase](400000194.jpg)
+![Flyer](400000194.jpg)
