--- a/23.md
+++ b/23.md
@@ -70,16 +70,21 @@
 #### Blog-Chain-Time 2023.11.25-15:56 in Tübingen  <a id="18010"/>
 ###### Topics: Hypothesis
 
-While I just want to start a complicated Work for the Dings-Project [Michael-Peters](1971091155.md) calls me to discuss some Issues with his planned [Vernissage](199000012.md).
+While I just want to start a complicated Work for my [Dings-Project](300000006.md), I've been putting off for a long Time, [Michael-Peters](1971091155.md) calls me to discuss some Issues with his planned [Vernissage](199000012.md).
 
-As usual I also report about my current Projects and we come to the Subject of the [Israel-Conflict](141000015.md) again, where he then recommends the [Matés-on-Israel-Palestinei-Iterview](193000000.md), where the Jewish [Dr.Gabor_Maté](70000078.md) is interviewed by [Hanna](70000079.md), who is his [Daughter](40000009.md).
+As usual I then also report about my current Projects and we come to the Subject of the [Israel-Conflict](141000015.md) again, where my Friend recommends the Interview [Matés-on-Israel-Palestinei](193000000.md), where the Jewish [Dr.Gabor_Maté](70000078.md) talks to [Hanna](70000079.md), who Btw is his [Daughter](40000009.md).
 
-
-The [Doctor](800002.md) really takes a hard Line with his own People and talks about the following [Hypotheses](600028.md):
+The [Doctor](800002.md) really takes a hard Line with his own People and brings up the following [Hypotheses](600028.md):
 
 - [Gaza-Strip is a Concentration-Camp](301000005.md)
 - [Israel commits Genocide](301000006.md)
-- [Israel has 4th strongest Military](301000007.md)
+- [Israel has *much* stronger Military](301000007.md)
+
+Besides that he also questions the Objectivity of our Mainstrea-Media, which I personally (at the Moment) also think, but for [Simplicity](600133.md) narrow down to the following [Hypotheses](600028.md):
+
+- [Public-Broadcasting-is-Biased](301000008.md)
+
+
 
 #### Blog-Chain-Time 2023.11.23-19:00 in Tübingen  <a id="18001"/>
 ###### Topics: Politics, Religion
