--- a/301000010.md
+++ b/301000010.md
@@ -1,3 +1,3 @@
 # Good-Life-for-All-Hypothesis
 
-The Good-Life-for-All-Hypothesis is a [Hypothesis](600028.md), that a [Good-Life](60066.md) for [All](7777.md) is a [Good-Goal](404.md).
+The Good-Life-for-All-Hypothesis is a [Hypothesis](600028.md), that a [Good-Life](60066.md) for [All](7777.md) is a [Good-Goal](301100000.md).
