--- a/23.md
+++ b/23.md
@@ -68,23 +68,25 @@
 ## Day-118: Politics and Religion <a id="18000"/>
 
 #### Blog-Chain-Time 2023.11.25-15:56 in Tübingen  <a id="18010"/>
-###### Topics: Hypothesis
+###### Topics: Hypothesis, Racism
 
-While I just want to start a complicated Work for my [Dings-Project](300000006.md), I've been putting off for a long Time, [Michael-Peters](1971091155.md) calls me to discuss some Issues with his planned [Vernissage](199000012.md).
+While I just want to start a complicated Work for my [Dings-Project](300000006.md), that I've been putting off for a long Time, a good Friend calls me to discuss some Issues with his current Plans.
 
-As usual I then also report about my current Projects and we come to the Subject of the [Israel-Conflict](141000015.md) again, where my Friend recommends the Interview [Matés-on-Israel-Palestinei](193000000.md), where the Jewish [Dr.Gabor_Maté](70000078.md) talks to [Hanna](70000079.md), who Btw is his [Daughter](40000009.md).
+After that we come to the Subject of the [Israel-Conflict](141000015.md), where my Colleague recommends the Interview [Matés-on-Israel-Palestinei](193000000.md), where the Jewish [Dr.Gabor_Maté](70000078.md) talks to [Hanna](70000079.md), who Btw is his [Daughter](40000009.md).
 
-The [Doctor](800002.md) really takes a hard Line with his own People and brings up the following [Hypotheses](600028.md):
-
-- [Gaza-Strip is a Concentration-Camp](301000005.md)
-- [Israel commits Genocide](301000006.md)
-- [Israel has *much* stronger Military](301000007.md)
-
-Besides that he also questions the Objectivity of our Mainstrea-Media, which I personally (at the Moment) also think, but for [Simplicity](600133.md) narrow down to the following [Hypotheses](600028.md):
+Like myself the [Doctor](800002.md) questions the Objectivity of our Mainstrea-Media, which for [Simplicity](600133.md) I would like to narrow down as follows:
 
 - [Public-Broadcasting-is-Biased](301000008.md)
 
+Besides that he really takes a hard Line with his own People and amongst other Things poses the following three [Hypotheses](600028.md):
 
+- [Gaza-Strip is a Concentration-Camp](301000005.md)
+- [Israel commits Genocide](301000006.md)
+- [Israel has much stronger Military](301000007.md)
+
+Not sure if this is all 100% correct, but one Thing is clear to me&nbsp;-&nbsp;[Racism](41010012.md) from whichever Side most of the Time is [Bad](60121.md) and instead perhaps we should better work *together* on a [Good-Life-for-All](301000010.md):
+
+![One Goal?](400000195.jpg)
 
 #### Blog-Chain-Time 2023.11.23-19:00 in Tübingen  <a id="18001"/>
 ###### Topics: Politics, Religion
