--- a/23.md
+++ b/23.md
@@ -74,7 +74,7 @@ While I just want to start a complicated Work for my [Dings-Project](300000006.m
 
 After that we come to the Subject of the [Israel-Conflict](141000015.md), where my Colleague recommends the Interview [Matés-on-Israel-Palestinei](193000000.md), where the Jewish [Dr.Gabor_Maté](70000078.md) talks to [Hanna](70000079.md), who Btw is his [Daughter](40000009.md).
 
-Like myself the [Doctor](800002.md) questions the Objectivity of our Mainstrea-Media, which for [Simplicity](600133.md) I would like to narrow down as follows:
+Like myself the [Doctor](800002.md) questions the Objectivity of our Mainstream-Media, which for [Simplicity](600133.md) I would like to narrow down as follows:
 
 - [Public-Broadcasting-is-Biased](301000008.md)
 
