--- a/193000000.md
+++ b/193000000.md
@@ -10,9 +10,9 @@ Dr. Gabor Maté on Israel/Palestine - October 28, 2023: [https://youtu.be](https
 
 #### Time-Stamps <a id="1020"/>
 
-[09:18](https://youtu.be/SHDBw-wx6w0?t=9m18s) [Gaza-Concentration-Camp-Hypothesis](301000005.md) \
-[18:32](https://youtu.be/SHDBw-wx6w0?t=18m32s) [Israel-Palestinian-Genocide-Hypothesis](301000006.md) \
-[28:25](https://youtu.be/SHDBw-wx6w0?t=28m25s) [Mainstream-Media-Biased-Hypothesis](301000008.md)
+[[09:18]](https://youtu.be/SHDBw-wx6w0?t=9m18s) [Gaza-Concentration-Camp-Hypothesis](301000005.md) \
+[[18:32]](https://youtu.be/SHDBw-wx6w0?t=18m32s) [Israel-Palestinian-Genocide-Hypothesis](301000006.md) \
+[[28:25]](https://youtu.be/SHDBw-wx6w0?t=28m25s) [Mainstream-Media-Biased-Hypothesis](301000008.md)
 
 ## History <a id="4000"/>
 
