--- a/2011000.md
+++ b/2011000.md
@@ -1,7 +1,7 @@
-# Next-Phase-Vernisage
+# Next-Phase-Ausstellung
 
-The Next-Phase-Vernisage is a [Vernisage](199000012.md) of Michael_Peters in the [Westspitze](2010045.md).
+Die Next-Phase-Ausstellung ist eine [Kunst-Ausstellung](199000012.md) von Michael_Peters in der [Westspitze](2010045.md).
 
-## Pictures
+## Bilder
 
 ![Flyer](400000194.jpg)
