--- a/23.md
+++ b/23.md
@@ -86,7 +86,8 @@ Besides that he really takes a hard Line with his own People and amongst other T
 
 Not sure if this is all 100% correct, but one Thing is clear to me&nbsp;-&nbsp;[Racism](41010012.md) from whichever Side most of the Time is [Bad](60121.md) and instead perhaps we should better work *together* on a [Good-Life-for-All](301000010.md):
 
-![One Goal?](400000195.jpg)
+![](400000195.jpg)
+![Let's do it!](400000196.mp3)
 
 #### Blog-Chain-Time 2023.11.23-19:00 in Tübingen  <a id="18001"/>
 ###### Topics: Politics, Religion
