--- a/23.md
+++ b/23.md
@@ -80,7 +80,7 @@ Like myself the [Doctor](800002.md) questions the Objectivity of our Mainstream-
 
 Besides that he really takes a hard Line with his own People and amongst other Things poses the following three [Hypotheses](600028.md):
 
-- [Gaza-Strip is a Concentration-Camp](301000005.md)
+- [Gaza is a Concentration-Camp](301000005.md)
 - [Israel commits Genocide](301000006.md)
 - [Israel has much stronger Military](301000007.md)
 
