--- a/23.md
+++ b/23.md
@@ -84,7 +84,7 @@ Besides that he really takes a hard Line with his own People and amongst other T
 - [Israel commits Genocide](301000006.md)
 - [Israel has strong Military](301000007.md)
 
-Not sure if all is 100% correct, but one Thing is clear to me&nbsp;-&nbsp;[Racism](41010012.md) from whichever Side most of the Time is [Bad](60121.md) and instead perhaps we should better work *together* on a [Good-Life-for-All](301000010.md):
+Not sure if all is 100% correct, but one Thing is clear to me&nbsp;-&nbsp;[Racism](41010012.md) from whichever Side most of the Time is [Bad](60121.md) and instead perhaps we should better work *together* on a [GoodLife4All](301000010.md):
 
 ![](400000195.jpg)
 ![Let's do it!](400000196.mp3)
