--- a/2011000.md
+++ b/2011000.md
@@ -1,7 +1,17 @@
-# Next-Phase-Ausstellung
+# Next-Phase-Ausstellung <a id="1"/>
 
 Die Next-Phase-Ausstellung ist eine [Kunst-Ausstellung](199000012.md) von Michael_Peters in der [Westspitze](2010045.md).
 
-## Bilder
+## Grußwort <a id="1000"/>
+
+Herzliche Einladung zu diesem umfangreichen Ausstellungsprojekt.
+
+Es werden abstrakte, feine, kontemplative, freie, farbige, komplexe, sinnliche Papierarbeiten der letzten 3 Jahre und ganz neue, großformatige Arbeiten auf Leinwand zu sehen sein.
+
+Auf was ich mich auch sehr freue, sind die interdisziplinären Begegnungen von Klang und Zeichnung, sowie Klang, Tanz und Farbe.
+
+Michael Peters
+
+## Bilder <a id="2000"/>
 
 ![Flyer](400000194.jpg)
