--- a/2011000.md
+++ b/2011000.md
@@ -1,6 +1,8 @@
-# Next-Phase-Ausstellung <a id="1"/>
+# Next-Phase <a id="1"/>
 
-Die Next-Phase-Ausstellung ist eine [Kunst-Ausstellung](199000012.md) von Michael_Peters in der [Westspitze](2010045.md).
+Next-Phase ist eine [Kunst-Ausstellung](199000012.md) von Michael_Peters in der [Westspitze](2010045.md).
+
+![](400000194.jpg)
 
 ## Grußwort <a id="1000"/>
 
@@ -12,6 +14,6 @@ Auf was ich mich auch sehr freue, sind die interdisziplinären Begegnungen von K
 
 Michael Peters
 
-## Bilder <a id="2000"/>
+## Programm <a id="2000"/>
 
-![Flyer](400000194.jpg)
+![](400000197.jpg)
