--- a/23.md
+++ b/23.md
@@ -99,7 +99,13 @@ After a Talk with [My-Black-Forest-Friend](1971091169.md) on the current [Israel
 This [Opinion](600028.md) then compared by [Katy_Halper](70000075.md) with a [Speech](60010004.md) [[1]](#18051) of [Netanjahu](70000073.md) from End of October 2023:
 
 > "You must remember what *Amalek* has done to you" says our Holy Bible. \
-> We do remember and we are fighting.  I find out, that this is a [Quote](700059.md) [[2]](#18052) of the [Book-of-Deuteronomy](71000017.md), where it is written: > Don’t forget what *Amalek* did to you on the Road after you left Egypt, how he attacked you when you were tired, barely able to put one Foot in front of another [...]. When GOD, your God, gives you Rest from all the Enemies that surround you in the inheritance-land GOD, your God, is giving you to Possess, you are to *wipe the Name of Amalek from off the Earth*. Don’t forget!  The [Amalek](180000017.md) were [Nomadic-People](180000016.md), who are said to have had a lot of Trouble with the [Israeli-People](140000071.md) and probably (as planned by God) got wiped out because of that:
+> We do remember and we are fighting.
+
+I find out, that this is a [Quote](700059.md) [[2]](#18052) of the [Book-of-Deuteronomy](71000017.md), where it is written:
+
+> Don’t forget what *Amalek* did to you on the Road after you left Egypt, how he attacked you when you were tired, barely able to put one Foot in front of another [...]. When GOD, your God, gives you Rest from all the Enemies that surround you in the inheritance-land GOD, your God, is giving you to Possess, you are to *wipe the Name of Amalek from off the Earth*. Don’t forget!
+
+The [Amalek](180000017.md) were [Nomadic-People](180000016.md), who are said to have had a lot of Trouble with the [Israeli-People](140000071.md) and probably (as planned by God) got wiped out because of that:
 
 ![Dead Thing](400000192.jpg)
 
