--- a/91000012.md
+++ b/91000012.md
@@ -1,3 +1,11 @@
 # Grundrechte-II-Teil-2
 
 Grundrechte-II-Teil-2 is a [Song](90000011.md).
+
+## Information
+
+The Text is taken from the [German-Grundgesetz](680005.md)
+
+> Artikel 3.3:
+>
+> Niemand darf wegen seines Geschlechtes, seiner Abstammung, seiner Rasse, seiner Sprache, seiner Heimat und Herkunft, seines Glaubens, seiner religiösen oder politischen Anschauungen benachteiligt oder bevorzugt werden.
