--- a/91000012.md
+++ b/91000012.md
@@ -4,7 +4,7 @@ Grundrechte-II-Teil-2 is a [Song](90000011.md).
 
 ## Information
 
-The Text is taken from the [German-Grundgesetz](680005.md)
+The Text is taken from the [German-Grundgesetz](680005.md):
 
 > Artikel 3.3:
 >
