--- a/301000012.md
+++ b/301000012.md
@@ -1,6 +1,6 @@
 # Interest-2-Result-Hypothesis
 
-The Interest-2-Result-Hypothesis is a [Hypothesis](600028.md), that a [Dependency](60163.md) between [Institutions](600097.md) and [Interest-Groups](404.md) leads to a [Transformation](600164.md) of the [Result](60033.md) to the [Interest](600116.md).
+The Interest-2-Result-Hypothesis is a [Hypothesis](600028.md), that a [Dependency](60163.md) between [Institutions](600097.md) and [Interest-Groups](180000018.md) leads to a [Transformation](600164.md) of the [Result](60033.md) to the [Interest](600116.md).
 
 ## Examples
 
