--- a/301000011.md
+++ b/301000011.md
@@ -1,6 +1,6 @@
-# Need-4-Attention-2-Extremes-Hypothesis
+# Required-Attention-2-Extreme-Hypothesis
 
-The Need-4-Attention-2-Extremes-Hypothesis is a [Hypothesis](600028.md), that [Need](60182.md) for [Attention](60175.md) leads to [Extremes](12000063.md).
+The Required-Attention-2-Extreme-Hypothesis is a [Hypothesis](600028.md), that [Requirement](60182.md) for [Attention](60175.md) leads to [Extremes](12000063.md).
 
 ## Examples
 
