Make it sompler

--- a/600140.md
+++ b/600140.md
@@ -1,3 +1,3 @@
 # The-Truth
 
-The-Truth is all [Truths](600021.md) with 100% [Probability](600031.md).
+The-Truth is [Truth](600021.md) with 100% [Probability](600031.md).
