--- a/301000013.md
+++ b/301000013.md
@@ -1,3 +1,3 @@
 # Wtc-Blasting-Hypothesis
 
-The Wtc-Blasting-Hypothesis is a [Hypothesis](600028.md), that the [World-Trade-Center](404.md) was destroyed by [Blasting](404.md).
+The Wtc-Blasting-Hypothesis is a [Hypothesis](600028.md), that the [World-Trade-Center](60100007.md) was destroyed by [Blasting](60200001.md).
