--- a/23.md
+++ b/23.md
@@ -76,7 +76,7 @@ After that we come to the Subject of the [Israel-Conflict](141000015.md), where 
 
 Like many of my Friends the [Doctor](800002.md) questions the Objectivity of our Mainstream-Media, which for [Simplicity](600133.md) I would like to narrow down as follows:
 
-- [Public-Broadcasting-is-Biased](301000008.md)
+- [Public Broadcasting is Biased](301000008.md)
 
 Besides that he really takes a hard Line with his own People and amongst other Things poses the following three [Hypotheses](600028.md):
 
