--- a/1971091112.md
+++ b/1971091112.md
@@ -1,3 +1,8 @@
 # My-Sony-Rx-10
 
 My-Sony-Rx-10 is a [Sony-Rx-10-IV](20000029.md) from [Michael_Holzheu](0.txt).
+
+## Photos
+
+![Front-Side](400000198.jpg)
+![Product-Label](400000199.jpg)
