--- a/1971091113.md
+++ b/1971091113.md
@@ -1,3 +1,8 @@
 # My-Sony-Alpha-77
 
 My-Sony-Alpha-77 is a [Sony-Alpha-77](20000030.md) from [Michael_Holzheu](0.txt).
+
+## Photos
+
+![Front-Side](400000200.jpg)
+![Product-Label](400000201.jpg)
