--- a/240000031.md
+++ b/240000031.md
@@ -1,3 +1,3 @@
 # Sigma
 
-Sigma is a [Corporation](240000000.md) from [Japan](404.md).
+Sigma is a [Corporation](240000000.md) from [Japan](140000087.md).
