--- a/1971091110.md
+++ b/1971091110.md
@@ -1,3 +1,7 @@
 # My-Samsung-Galaxy-S22-Ultra
 
 My-Samsung-Galaxy-S22-Ultra is a [Samsung-Galaxy-S22-Ultra](20000001.md).
+
+## Photos
+
+![Front-Side](400000203.jpg)
