--- a/1971091115.md
+++ b/1971091115.md
@@ -1,3 +1,7 @@
 # My-Sure-Sm-57
 
 My-Sure-Sm-57 is a [Sure-Sm-57](49100003.md) from [Michael_Holzheu](0.md).
+
+## Photos
+
+![Packing](400000204.jpg)
