--- a/49100003.md
+++ b/49100003.md
@@ -1,3 +1,3 @@
 # Shure-Sm-57
 
-A Shure-Sm-57 is a [Microphone](49100002.md) from [Shure](240000032.md).
+A Shure-Sm-57 is a [Moving-Coil-Microphone](49100007.md) from [Shure](240000032.md).
