--- a/2011000.md
+++ b/2011000.md
@@ -1,6 +1,6 @@
 # Next-Phase <a id="1"/>
 
-Next-Phase ist eine [Kunst-Ausstellung](199000012.md) von Michael_Peters in der [Westspitze](2010045.md).
+Next-Phase ist eine [Kunst-Ausstellung](199000012.md) von [Michael_Peters](70000080.md) in der [Westspitze](2010045.md).
 
 ![](400000194.jpg)
 
