--- a/2011000.md
+++ b/2011000.md
@@ -4,7 +4,7 @@ Next-Phase ist eine [Kunst-Ausstellung](199000012.md) von [Michael_Peters](70000
 
 ![](400000194.jpg)
 
-## Grußwort <a id="1000"/>
+## Einladung <a id="1000"/>
 
 Herzliche Einladung zu diesem umfangreichen Ausstellungsprojekt.
 
