--- a/70000080.md
+++ b/70000080.md
@@ -8,7 +8,7 @@ Michael-Carsten_Peters is a [Human](40000001.md).
 
 ## Links <a id="2000"/>
 
-- Home-Page: [http://michaelcpeters.com/](http://michaelcpeters.com)
+- Home-Page: [http://michaelcpeters.com](http://michaelcpeters.com)
 - Face-Book: [https://facebook.com](https://www.facebook.com/michael.c.peters.98)
 
 ## Photos <a id="3000"/>
