--- a/70000080.md
+++ b/70000080.md
@@ -13,4 +13,4 @@ Michael-Carsten_Peters is a [Human](40000001.md).
 
 ## Photos <a id="3000"/>
 
-![My-First-from-Artist](400000206.jpg)
+![My-First-from-Michael](400000206.jpg)
