--- a/2010045.md
+++ b/2010045.md
@@ -6,3 +6,7 @@ The Westspitze is as [Building](60100002.md) in [Tübingen](2000001.md).
 
 Eisenbahnstr. 1 \
 72072 Tübingen
+
+## Photos <a id="2000"/>
+
+![View on Swabian-Jura](400000208.jpg)
