--- a/23.md
+++ b/23.md
@@ -72,7 +72,7 @@
 
 While I just want to start a complicated Work for my [Dings-Project](300000006.md), that I've been putting off for a long Time, a good Friend calls me to discuss some Issues with his current Plans.
 
-After that we come to the Subject of the [Israel-Conflict](141000015.md), where my Colleague recommends the Interview [Matés-on-Israel-Palestinei](193000000.md), where the Jewish [Dr-Gabor_Maté](70000078.md) talks to [Hanna](70000079.md), who Btw is his [Daughter](40000009.md).
+After that we come to the Subject of the [Israel-Conflict](141000015.md), where my Colleague recommends the Interview [Matés-on-Israel-Palestinei](193000000.md), where the Jewish [Dr-Gabor_Maté](70000078.md) talks to [Hanna](70000079.md), who is his [Daughter](40000009.md).
 
 Like many of my Friends the [Doctor](800002.md) questions the Objectivity of our Mainstream-Media, which for [Simplicity](600133.md) I would like to narrow down as follows:
 
