--- a/23.md
+++ b/23.md
@@ -321,7 +321,7 @@ I still have some Doubts and try to explain my View of Things with a "Cigarette-
 
 For an [Explanation](60014.md) of this [Technology](16000001.md), here a more accurate Version of my [Side-Walk](1100000018.md)-Plot:
 
-![Sinus-Wave-Superposition](400000130.png) {#12009:1}
+![Sinus-Wave-Superposition](400000130.png) <a id="12009"/>
 
 #### Blog-Chain-Time 2023.10.04-19:51 in Tübingen <a id="12002"/>
 ###### Topics: Pythagorean-Comma
