--- a/0.md
+++ b/0.md
@@ -1,8 +1,8 @@
-# Michael_Georg_Holzheu <a id="1"/>
+# Michael-Georg_Holzheu <a id="1"/>
 
 <img src="400000028.jpg" alt="Michael_Holzheu" style="width:256px; height: 256px;"/>
 
-Michael_Georg_Holzheu is a [Human](40000001.md).
+Michael-Georg_Holzheu is a [Human](40000001.md).
 
 ## Identities <a id="1000"/>
 
