--- a/3.md
+++ b/3.md
@@ -1,3 +1,3 @@
 # Clash-of-Clans
 
-Clash-of-Clans is an online Game from Supercell.
+Clash-of-Clans is an [Online-Game](280000012.md) from [Supercell](240000034.md).
