--- a/6.md
+++ b/6.md
@@ -6,7 +6,7 @@ The User [Holyheu](3.md) tells a [Story](6.markdown) about his Experiences in th
 
 Nachdem [ich](0.md) heute vor genau einem Jahr am dem [4. April 2022](1.md) einen [Bericht](2.md) über meine ersten Erfahrungen mit dem Online-Spiel [Clash of Clans](3.md) veröffentlicht habe, ist nun ein weiteres Jahr vergangen.
 
-Aus irgendeinem Grund habe ich mich von Anfang an für die Geschichte der [Nordfriesländer](180001000.md) interessiert, weshalb ich dann anfange, die Vorkommnisse mit Hilfe von [Bildern](30000002.md) und [Videos](200300000.md) zu dokumentieren.
+Aus irgendeinem Grund habe ich mich von Anfang an für die Geschichte der [Nordfriesländer](11.md) interessiert, weshalb ich dann anfange, die Vorkommnisse mit Hilfe von [Bildern](30000002.md) und [Videos](200300000.md) zu dokumentieren.
 
 Der allererste [Screen-Shot](30000001.md) ist vom Freitag, den 16. April 2021 um 01:53, wo man bereits meine erste [Strategie](160000000.md) sieht: Ich habe das Dorf ganz an den Rand gebaut, damit der Gegner "gezwungen" wird, von einer Seite anzugreifen:
 
