--- a/180001000.md
+++ b/180001000.md
@@ -1,3 +1,3 @@
 # Nordfriesländer
 
-A Nordfriesländer is a [Group](180000000.md) of [Humans](40000001.md) in [Germany](140000025.md).
+This Number-File is no longer maintained, [here](11.md) you can find its living Gemini.
