--- a/11.md
+++ b/11.md
@@ -1,3 +1,3 @@
 # Clash-of-Clans-Nordfriesländer
 
-Clash-of-Clans-Nordfriesländer is a [Group](180000000.md) in [Germany](140000025.md) for playing [Clash-of-Clans](3.md).
+Clash-of-Clans-Nordfriesländer is a [Clan](180000019.md) in [Germany](140000025.md) for [Clash-of-Clans](3.md).
