--- a/180001000.md
+++ b/180001000.md
@@ -1,3 +1,3 @@
 # Nordfriesländer
 
-This Number-File is no longer maintained, [here](11.md) you can find its living Gemini.
+A Nordfriesländer is a [Resident](600198.md) of [Nordfriesland](404.md).
