--- a/250025003.md
+++ b/250025003.md
@@ -1,3 +1,3 @@
-# Footage
+# Media-Raw-Data
 
-Footage is [Data](60001.md) in a [Media-Science-System](250025001.md).
+Media-Raw-Data is [Data](60001.md) in a [Media-Science-System](250025001.md).
