--- a/250025004.md
+++ b/250025004.md
@@ -1,3 +1,3 @@
-# Video-Raw-Material
+# Video-Raw-Data
 
-Video-Raw-Material is [Media-Raw-Material](250025003.md) from a [Optics-System](49000001.md).
+Video-Raw-Data is [Media-Raw-Data](250025003.md) from a [Optics-System](49000001.md).
