--- a/20000034.md
+++ b/20000034.md
@@ -1,3 +1,3 @@
 # Huawei-P30-Pro
 
-A Huawei-P30-Pro is a [Smart-Phone](20000005.md) from [Huawei](404.md).
+A Huawei-P30-Pro is a [Smart-Phone](20000005.md) from [Huawei](240000038.md).
