--- a/2010045.md
+++ b/2010045.md
@@ -4,5 +4,5 @@ The Westspitze is as [Building](60100002.md) in [Tübingen](2000001.md).
 
 ## Address <a id="1000"/>
 
-Eisenbahnstr. 1 \
+Eisenbahnstr. 1 und 2 \
 72072 Tübingen
