--- a/2010045.md
+++ b/2010045.md
@@ -2,11 +2,11 @@
 
 The Westspitze is as [Building](60100002.md) in [Tübingen](2000001.md).
 
-## Address <a id="1000"\>
+## Address <a id="1000"/>
 
 Eisenbahnstr. 1 und 2 \
 72072 Tübingen
 
-## Photos <a id="2000"\>
+## Photos <a id="2000"/>
 
 ![From Blaue-Brücke](400000210.jpg)
