Use new YouTube-Video

--- a/2011000.md
+++ b/2011000.md
@@ -24,4 +24,4 @@ Michael Peters
 
 ## Rundgang <a id="4000"/>
 
-<iframe width="800" height="450" src="https://www.youtube.com/embed/tK9Q7141UAM?si=yefLokxeEk3CKAj9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe style="width:100%;aspect-ratio:16/9" src="https://www.youtube.com/embed/UXEszSnljXo?si=952tkl4Ch-eB84ZI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
