Change Dings-Name and add Definition

--- a/3333.md
+++ b/3333.md
@@ -1,5 +1,7 @@
-# Hollerith Elecric Tabulating System
+# Hollerith-Elecric-Tabulating-System
+
+The Hollerith-Elecric-Tabulating-System is a [Calculating-Machine](20000015.md).
 
 ## Links
 
-- Explanation Film: https://holzheu.de/HETS
+- [Holzheu.de](192000004.md): [https://holzheu.de](https://holzheu.de/HETS)
