--- a/810001.md
+++ b/810001.md
@@ -1,3 +1,7 @@
 # Levetiracetam
 
 Levetiracetam is an [Anti-Epilepticum](810000.md).
+
+## Links
+
+- Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/Levetiracetam)
