--- a/810004.md
+++ b/810004.md
@@ -1,3 +1,7 @@
 # Paracetamol
 
 Paracetamol is an [Analgesic](810003.md).
+
+## Links
+
+- Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/Paracetamol)
