--- a/300050001.md
+++ b/300050001.md
@@ -90,6 +90,10 @@ For this Invention all Kind of Waves can be used, for Example:
 - [Wind-Waves](10000083.md)
 - [Gravity-Waves](10000099.md)
 
+## Examples <a id="1900"/>
+
+One simple real Example are two parallel [Lasers](10000120.md) with 180 Degree [Phase-Shift](10000079.md), that eliminate each other.
+
 ## Use-Cases <a id="1400"/>
 
 ### Heat or Cool <a id="1410"/>
