Fix Typo and make it more clear

--- a/300050001.md
+++ b/300050001.md
@@ -92,7 +92,7 @@ For this Invention all Kind of Waves can be used, for Example:
 
 ## Examples <a id="1900"/>
 
-One simple real Example are two parallel [Lasers](10000120.md) with the same [Frequency](10000016.md), [Aplitude](10000015.md) and 180 Degree [Phase-Shift](10000079.md), that eliminate each other.
+One simple real Example are two parallel [Lasers](10000120.md) with the same [Frequency](10000016.md) and [Amplitude](10000015.md), but 180 Degree [Phase-Shift](10000079.md), that eliminate each other.
 
 ## Use-Cases <a id="1400"/>
 
