--- a/300030007.md
+++ b/300030007.md
@@ -1,3 +1,11 @@
 # Dings-Mac-Book-Install-Howto
 
 Dings-Mac-Book-Install-Howto is an [Howto](700022.md), that describes how a Mac-Book should be installed.
+
+## Homebrew
+
+Install [Homebrew](2000243.md) to `/opt/homebrew/bin`.
+
+```bash
+/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+```
