--- a/300030007.md
+++ b/300030007.md
@@ -7,5 +7,22 @@ Dings-Mac-Book-Install-Howto is an [Howto](700022.md), that describes how a Mac-
 Install [Homebrew](2000243.md) to `/opt/homebrew/bin`.
 
 ```bash
-/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+$ /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+```
+
+## Additional Packages
+
+```bash
+$ brew install pandoc imagemagick exiftool
+```
+
+## Pcloud-Drive
+
+- Download-Link: [https://www.pcloud.com](https://www.pcloud.com/de/download-free-online-cloud-file-storage.html)
+
+
+## Python-Packages
+
+```bash
+$ pip3 install pytz tzlocal numpy matplotlib bitmath opencv-python
 ```
