--- a/300030008.md
+++ b/300030008.md
@@ -4,6 +4,8 @@ Dings-Mac-Win-Germany-Keyboard is a Config-File for MacOS to enable a Windows Ke
 
 ## Installation
 
+Use Config-File: [win-germany.keylayout](300030008.keylayout):
+
 ````bash
 $ cp 300030008.keylayout ~/Library/Keyboard\ Layouts/win-germany.keylayout
 ```
