--- a/300030007.md
+++ b/300030007.md
@@ -1,6 +1,10 @@
 # Dings-Mac-Book-Install-Howto
 
-Dings-Mac-Book-Install-Howto is an [Howto](700022.md), that describes how a Mac-Book should be installed.
+Dings-Mac-Book-Install-Howto is a [Howto](700022.md), that describes how a Mac-Book should be installed.
+
+## Windows-Keyboard
+
+Install Windows-Keyboard-Layout with [Mac-Win-Germany-Keyboard](300030008.md), then go to "Sondertasten" and exchange "Control" with "Command".
 
 ## Homebrew
 
