Use Download-Link

--- a/300030008.md
+++ b/300030008.md
@@ -4,7 +4,7 @@ Dings-Mac-Win-Germany-Keyboard is a Config-File for MacOS to enable a Windows Ke
 
 ## Installation
 
-Use Config-File: [win-germany.keylayout](300030008.keylayout):
+Use Config-File: <a href="300030008.keylayout" download>300030008.keylayout</a>
 
 ```bash
 $ cp 300030008.keylayout ~/Library/Keyboard\ Layouts/win-germany.keylayout
