--- a/300030007.md
+++ b/300030007.md
@@ -17,7 +17,7 @@ $ /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/
 ## Additional Packages
 
 ```bash
-$ brew install pandoc imagemagick exiftool
+$ brew install pandoc imagemagick exiftool vim php
 ```
 
 ## Pcloud-Drive
