--- a/300030007.md
+++ b/300030007.md
@@ -20,6 +20,18 @@ $ /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/
 $ brew install pandoc imagemagick exiftool vim php
 ```
 
+## Configure Bash
+
+```bash
+$ cp Work-Dir/14.bashrc  ~/.bashrc
+```
+
+## Configure Vim
+
+```bash
+$ cp Work-Dir/13.vimrc ~/.vimrc
+```
+
 ## Pcloud-Drive
 
 - Download-Link: [https://www.pcloud.com](https://www.pcloud.com/de/download-free-online-cloud-file-storage.html)
