--- a/23.md
+++ b/23.md
@@ -2987,7 +2987,7 @@ Disadvantages of Virtual-Mappings:
 
 ### Links
 
-- [<a id="3211"/>3211] The Simplest Ways to Handle HTML Includes: https://css-tricks.com/the-simplest-ways-to-handle-html-includes
+- [<a id="3211"/>3211] The Simplest Ways to handle HTML Includes: https://css-tricks.com/the-simplest-ways-to-handle-html-includes
 
 ## Day-31: Chat-GPT <a id="3100"/>
 
