--- a/21.md
+++ b/21.md
@@ -338,7 +338,7 @@ First we drive to the Practice-Area near the beautiful [Recycling-Center](110300
 
 ![Young Dussel](400000098.jpg)
 
-Oh Boy, it's high Time to grow up, really! But back to me&nbsp;-&nbsp;To make it not too obvious for my old Hares, I regularily switch between Wild-Boar- and Pussy-Style, so extremely loud [Accelerations](10000115.md) are followed by rally broad and slow [U-Turns](1100000009.md).
+Oh Boy, it's high Time to grow up, really! But back to me&nbsp;-&nbsp;To make it not too obvious for my old Hares, I regularily switch between Wild-Boar- and Pussy-Style, so extremely loud [Accelerations](10000115.md) are followed by really broad and slow [U-Turns](1100000009.md).
 
 Then I have to do the Excercises, of which the most dangerous One is called by our [Brave-Viking](150000005.md) simply My-[Kyrptonite](750001.md). Suddenly it looks like the two Traffic-Experts now somehow smelled the Rat and therefore try to test me more accurately.
 
