--- a/1000001.md
+++ b/1000001.md
@@ -48,7 +48,7 @@ OOOO.04.OO
 
 Specify Date and Time in German (Central European) Time according to the current Summer/Daylight Time.
 
-For Example let's say something happens in Germany at 2023.03.26 at 1:58 (Winter Time):
+For Example let's say Something happens in Germany at 2023.03.26 at 1:58 (Winter Time):
 
 ```
 2023.03.26-01:58 Something interesting happened
@@ -56,4 +56,4 @@ For Example let's say something happens in Germany at 2023.03.26 at 1:58 (Winter
 
 If three Minutes later another thing happens you have to write:
 ```
-2023.03.26-03:01 More interesting things happened
+2023.03.26-03:01 More interesting Things happened
