--- a/1000001.md
+++ b/1000001.md
@@ -35,13 +35,13 @@ If the Date is not required, specify only the Time:
 23:04:10,091
 ```
 
-If some Elements of the TimeStamp are not known, the Character 'O' (like Open) is used to mark the uncertain Parts.
+If some Elements of the TimeStamp are not known, the Character 'X' is used to mark the uncertain Parts.
 
 ```
-OOOO.04.OO
-20OO.04.OO
-2021.04.OO
-2021.04.04-OO:OO
+XXXX.04.XX
+20XX.04.XX
+2021.04.XX
+2021.04.04-12:XX
 ```
 
 ## Standard Time Zone
