--- a/1000001.md
+++ b/1000001.md
@@ -19,7 +19,7 @@ Timestamps are specified as follows: YYYY.MM.DD-HH:MM:SS,F
 - SS: Second
 - F: Decimal Fraction of a Second
 
-For Example the 4th of April 2021 at 11pm, 4 minutes, 10 seconds and 91 Milliseconds is written as:
+For Example the 4th of April 2021 at 11pm, 4 Minutes, 10 Seconds and 91 Milliseconds is written as:
 
 ```
 2021.04.04
