--- a/1000001.md
+++ b/1000001.md
@@ -54,6 +54,6 @@ For Example let's say Something happens in Germany at 2023.03.26 at 1:58 (Winter
 2023.03.26-01:58 Something interesting happened
 ```
 
-If three Minutes later another thing happens you have to write:
+If three Minutes later another Thing happens you have to write:
 ```
 2023.03.26-03:01 More interesting Things happened
