--- a/1000001.md
+++ b/1000001.md
@@ -46,14 +46,15 @@ XXXX.04.XX
 
 ## Standard Time Zone
 
-Specify Date and Time in German (Central European) Time according to the current Summer/Daylight Time.
+Specify Date and Time in German (Central European) Time according to the current Summer/Daylight-Time.
 
-For Example let's say Something happens in Germany at 2023.03.26 at 1:58 (Winter Time):
+For Example let's say Something happens in Germany at 2023.03.26 at 1:58 in Winter-Time:
 
 ```
 2023.03.26-01:58 Something interesting happened
 ```
 
-If three Minutes later another Thing happens you have to write:
+If three Minutes later another Thing happens in Summer-Time, you have to write:
 ```
 2023.03.26-03:01 More interesting Things happened
+```
