--- a/1971091153.md
+++ b/1971091153.md
@@ -1,7 +1,7 @@
-# Bert-Pferd
+# Bert-Pferd  <a id="1"/>
 
 Bert-Pferd is a [Cuddly-Toy](281000003.md).
 
-## Photos
+## Photos <a id="1000"/>
 
 ![Love for Bert](400000046.jpg)
