--- a/1971091153.md
+++ b/1971091153.md
@@ -4,4 +4,4 @@ Bert-Pferd is a [Cuddly-Toy](281000003.md).
 
 ## Photos <a id="1000"/>
 
-![Love for Bert](400000046.jpg)
+![Snoring Bert](400000046.jpg)
