--- a/300000010.md
+++ b/300000010.md
@@ -1,3 +1,3 @@
-# Dings-File
+# Dings-Number-File
 
-An Dings-File is a [File](9000007.md) with a [Dings-Number](300000015.md).
+A Dings-Number-File is a [File](9000007.md) with a [Dings-Number](300000015.md).
