Change Dings-Name (again)

--- a/300000010.md
+++ b/300000010.md
@@ -1,3 +1,3 @@
-# Dings-Number-File
+# Dings-File
 
-A Dings-Number-File is a [File](9000007.md) with a [Dings-Number](300000015.md).
+A Dings-File is a [File](9000007.md) with a [Dings-Number](300000015.md).
