--- a/1971091151.md
+++ b/1971091151.md
@@ -1,7 +1,7 @@
-# Muffi
+# Muffi <a id="0"/>
 
 Muffi is a [Cuddly-Toy](281000003.md).
 
-## Photos
+## Photos <a id="1000"/>
 
 ![Muffi in Bed](400000216.jpg)
