--- a/1971091152.md
+++ b/1971091152.md
@@ -1,7 +1,7 @@
-# Schnuffi
+# Schnuffi  <a id="0"/>
 
 Schnuffi is a [Cuddly-Toy](281000003.md).
 
-## Photos
+## Photos  <a id="1000"/>
 
 ![Schnuffi in Bed](400000217.jpg)
