--- a/300100001.md
+++ b/300100001.md
@@ -2,17 +2,54 @@
 
 All-Dings-Overview is a [Presentation](404.md) that describes the [Goals](60058.md) of the [Dings-Project](300000006.md).
 
+## Problem-Statement
+
+- Different Systems, User-Interfaces, Versions ...
+- Bad Interfaces between Systems
+- Data not well connected
+- Systems for Humans vs. Systems for Machines
+- Not your own Data
+- Chaos
+
 ## Mission-Statement <a id="1000"/>
 
-The [Dings-System](300000007.md) is a [Computer-System](9000153.md), that is able to host *all* of your Digital-Data as [Dings-Objects](300000001.md) with the Purpose of:
+The [Dings-System](300000007.md) is an "egg-laying, milk-bearing woolly" [Computer-System](9000153.md), that is able to host *all* of your [Data](60001.md) as [Dings-Objects](300000001.md), that can be used for both, [Humans](40000001.md) and [Computers](9000153.md). It combines all Features of the currently unlinked Systems:
 
 - Storing
-- Backup
-- Finding
-- Analysis
-- Reporting
+    - [File-Systems](9000025.md)
+    - Databases
 - Versioning
+    - [Github](9000061.md)
+- Backup
+- Information Organization
+    - [Wikipedia](190000006.md)
+    - [Wikidata](191000001.md)
+- Search & Find
+    - Google-Search
+- Analysis
+    - [ChatGPT](9000150.md)
+- Reporting / Accounting
+    - SAP
+- Processing
+    - [Gimp](9000053.md)
+    - Microsoft-Word
+    - Microsoft-Excel
+    - Premiere-Pro
+- Digital-Money
+    - [Bitcoin](130000023.md)
+    - Etherium
+- Smart-Contracts
+    - Etherium
+- Communication
+    - [E-Mail](9000139.md)
+    - [WhatsApp](9000139.md)
+    - [Social-Media](241000000.md): [Facebook](240000017.md), [LinkedIn](241000001.md), [Twitter](190000008.md), etc.
 - Presenting
+    - [Wordpress](404.md)
+    - [YouTube](190000001.md)
+    - [Social-Media](241000000.md): [Facebook](240000017.md), [LinkedIn](241000001.md), [Twitter](190000008.md), etc.
+
+Through the [Connection](60006.md) of [Dings-Objects](300000001.md) much more [Value](700030.md) is created out of your Data and a lot of Redundancy is removed, which saves [Time](10000002.md), [Money](6666.md) and [Energy](10000040.md).
 
 ## Basics <a id="2000"/>
 
@@ -55,6 +92,13 @@ $ dings list 1971091151
   - Muffi [About](21)
   - Muffi [Muffi-and-Schnuffi-Photo](400000001)
 ```
+
+## Users <a id="2042"/>
+
+The [Dings-User](300000037.md) is a special [Dings-Object](300000001.md) that can be verified by:
+
+- Digital Passport
+- World-Id
 
 ### Definitions <a id="2050"/>
 
