Add important Statement

--- a/300100001.md
+++ b/300100001.md
@@ -49,7 +49,7 @@ The [Dings-System](300000007.md) is an "egg-laying, milk-bearing woolly" [Comput
     - [YouTube](190000001.md)
     - [Social-Media](241000000.md): [Facebook](240000017.md), [LinkedIn](241000001.md), [Twitter](190000008.md), etc.
 
-Through the [Connection](60006.md) of [Dings-Objects](300000001.md) much more [Value](700030.md) is created out of your Data and a lot of Redundancy is removed, which saves [Time](10000002.md), [Money](6666.md) and [Energy](10000040.md).
+Through the [Connection](60006.md) of [Dings-Objects](300000001.md) much more [Value](700030.md) is created out of your Data and a lot of Redundancy is removed, which saves [Time](10000002.md), [Money](6666.md) and [Energy](10000040.md). It also leads to more Organization Clarity and reduces the current Chaos in our (personal) Digital-World.
 
 ## Basics <a id="2000"/>
 
