--- a/300100001.md
+++ b/300100001.md
@@ -125,7 +125,7 @@ The Dings-Objects are presented via [Html-Files](9000134.md), that can be shown 
 There are three security Levels:
 
 - Local
-- Intranet (currently with Password
+- Intranet (currently with Password)
 - Internet
 
 ## Use-Cases <a id="4000"/>
