--- a/300100001.md
+++ b/300100001.md
@@ -13,7 +13,7 @@ All-Dings-Overview is a [Presentation](404.md) that describes the [Goals](60058.
 
 ## Mission-Statement <a id="1000"/>
 
-The [Dings-System](300000007.md) is an "egg-laying, milk-bearing woolly" [Computer-System](9000153.md), that is able to host *all* of your [Data](60001.md) as [Dings-Objects](300000001.md), that can be used for both, [Humans](40000001.md) and [Computers](9000153.md). It combines all Features of the currently unlinked Systems:
+The [Dings-System](300000007.md) is an "egg-laying, milk-bearing woolly" [Computer-System](9000153.md), that is able to host *all* of your [Data](60001.md) as [Dings-Objects](300000001.md), that can be used for both, [Humans](40000001.md) and [Computers](9000153.md). It combines all Features of the currently not well linked Systems:
 
 - Storing
     - [File-Systems](9000025.md)
