--- a/300100001.md
+++ b/300100001.md
@@ -2,7 +2,7 @@
 
 All-Dings-Overview is a [Presentation](404.md) that describes the [Goals](60058.md) of the [Dings-Project](300000006.md).
 
-## Problem-Statement <a id="6000"/>
+## Problem <a id="6000"/>
 
 - Different Systems, User-Interfaces, Versions ...
 - Bad Interfaces between Systems
@@ -11,7 +11,7 @@ All-Dings-Overview is a [Presentation](404.md) that describes the [Goals](60058.
 - Not your own Data
 - Chaos
 
-## Mission-Statement <a id="1000"/>
+## Mission <a id="1000"/>
 
 The [Dings-System](300000007.md) is an "egg-laying, milk-bearing woolly" [Computer-System](9000153.md), that is able to host *all* of your [Data](60001.md) as [Dings-Objects](300000001.md), that can be used for both, [Humans](40000001.md) and [Computers](9000153.md). It combines all Features of the currently not well linked Systems:
 
