--- a/300100001.md
+++ b/300100001.md
@@ -4,13 +4,14 @@ All-Dings-Overview is a [Presentation](404.md) that describes the [Goals](60058.
 
 ## Problem <a id="6000"/>
 
-Current Computer-Systems have lot's of Problems:
+Current [Computer-Systems](9000153.md) have lot's of Problems:
 
 - Different Systems, User-Interfaces, Versions ...
 - Bad Interfaces between Systems
 - Data not well connected
 - Systems for Humans vs. Systems for Machines
 - No Control over own Data
+- Unidentified and anonymous Users
 - Chaos
 
 ## Mission <a id="1000"/>
