Add Possibility of Change

--- a/300100001.md
+++ b/300100001.md
@@ -76,7 +76,7 @@ All [Dings-Objects](300000001.md) have an unique [Dings-Number](300000015.md) th
 
 ### Names <a id="2030"/>
 
-Each Dings-Object has a Dings-Name, that can be changed. [References](60039.md) to the Object can use different Names, for Example:
+Each Dings-Object has a [Dings-Name](300000016.md), that can be changed. [References](60039.md) to the Object can use different Names, for Example:
 
 - Besides of Programming [Mike](0.md), is also able to play Tennis.
 
@@ -112,6 +112,8 @@ The [Dings-User](300000037.md) is a special [Dings-Object](300000001.md) that ca
 Each Dings-Object has a short [Definition](13000002.md) that should make clear, what exactly is meant, for Example:
 
 - Michael-Georg_Holzheu is a [Human](40000001.md).
+
+Like the [Dings-Name](300000016.md), also the [Definition](13000002.md) can change, but the [Meaning](60002.md) of a [Dings-Object](300000001.md) with a defined [Dings-Number](300000015.md) should never change.
 
 ### Embedding <a id="2060"/>
 
