Add Chapter Meaning

--- a/300100001.md
+++ b/300100001.md
@@ -113,6 +113,8 @@ Each Dings-Object has a short [Definition](13000002.md) that should make clear, 
 
 - Michael-Georg_Holzheu is a [Human](40000001.md).
 
+### Meaning <a id="2060"/>
+
 Like the [Dings-Name](300000016.md), also the [Definition](13000002.md) can change, but the [Meaning](60002.md) of a [Dings-Object](300000001.md) with a defined [Dings-Number](300000015.md) should never change.
 
 ### Embedding <a id="2060"/>
