--- a/300100001.md
+++ b/300100001.md
@@ -100,7 +100,7 @@ $ dings list 1971091151
   - Muffi [Muffi-and-Schnuffi-Photo](400000001)
 ```
 
-## Users <a id="2042"/>
+### Users <a id="2042"/>
 
 The [Dings-User](300000037.md) is a special [Dings-Object](300000001.md) that can be verified by:
 
