Add Muffi-Meaning Example

--- a/300100001.md
+++ b/300100001.md
@@ -115,7 +115,7 @@ Each Dings-Object has a short [Definition](13000002.md) that should make clear, 
 
 ### Meaning <a id="2060"/>
 
-Like the [Dings-Name](300000016.md), also the [Definition](13000002.md) can change, but the [Meaning](60002.md) of a [Dings-Object](300000001.md) with a defined [Dings-Number](300000015.md) should never change.
+Like the [Dings-Name](300000016.md), also the [Definition](13000002.md) can change, but the [Meaning](60002.md) of a [Dings-Object](300000001.md) with a defined [Dings-Number](300000015.md) should never change, for Example [Muffi](1971091151.md) with the associated Dings-Number 1971091151 will always be "The Muffi" of [My-Fellow-Occupant](88.md).
 
 ### Embedding <a id="2060"/>
 
