--- a/300100001.md
+++ b/300100001.md
@@ -113,13 +113,13 @@ Each Dings-Object has a short [Definition](13000002.md) that should make clear, 
 
 - Michael-Georg_Holzheu is a [Human](40000001.md).
 
-### Meaning <a id="2060"/>
+### Meanings<a id="2060"/>
 
 Like the [Dings-Name](300000016.md), also the [Definition](13000002.md) can change, but the [Meaning](60002.md) of a [Dings-Object](300000001.md) should never change, for Example [Muffi](1971091151.md) with the associated [Dings-Number](300000015.md) 1971091151 will always be "The Muffi" of [My-Fellow-Occupant](88.md).
 
-### Embedding <a id="2060"/>
+### Embeddings <a id="2060"/>
 
-Besides of referencing Dings-Objects, they can also be embedded in other Objects, for Example [My-Calculator-Photo](400000105.md) can be also included in this Document:
+Besides of referencing Dings-Objects, they can also be embedded in other Objects, for Example [My-Calculator-Photo](400000105.md), that is included in this Document:
 
 ![Embedded Version](400000105.jpg)
 
