--- a/300100001.md
+++ b/300100001.md
@@ -104,8 +104,8 @@ $ dings list 1971091151
 
 The [Dings-User](300000037.md) is a special [Dings-Object](300000001.md) that can be verified by:
 
-- Digital Passport
-- World-Id
+- [Digital-Passport](13300004.md)
+- [World-Id](170100003.md)
 
 ### Definitions <a id="2050"/>
 
