--- a/170100003.md
+++ b/170100003.md
@@ -1,3 +1,7 @@
 # World-Identifier
 
 The World-Identifier is a [Number](60000.md) that represents an [Identity](170000000.md).
+
+## Links
+
+- Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/Worldcoin)
